project_sdci/kubernetes/sdci_frService_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-frservice
spec:
  selector:
    matchLabels:
      app: sdci-frservice
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-frservice
    spec:
      containers:
      - name: sdci-frservice-container
        image: queenie2002/sdci-project:frservice
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
