project_sdci/kubernetes/sdci_gf1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gf1
spec:
  selector:
    matchLabels:
      app: sdci-gf1
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gf1
    spec:
      containers:
      - name: sdci-gf1-container
        image: queenie2002/sdci-project:gf
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
