project_sdci/kubernetes/sdci_gf2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gf2
spec:
  selector:
    matchLabels:
      app: sdci-gf2
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gf2
    spec:
      containers:
      - name: sdci-gf2-container
        image: queenie2002/sdci-project:gf
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
