project_sdci/kubernetes/sdci_gf3_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gf3
spec:
  selector:
    matchLabels:
      app: sdci-gf3
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gf3
    spec:
      containers:
      - name: sdci-gf3-container
        image: queenie2002/sdci-project:gf
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
