project_sdci/kubernetes/sdci_gi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gi
spec:
  selector:
    matchLabels:
      app: sdci-gi
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gi
    spec:
      containers:
      - name: sdci-gi-container
        image: queenie2002/sdci-project:gi
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m" 
            memory: "128Mi"  
          limits:
            cpu: "200m" 
            memory: "256Mi"
