project_sdci/kubernetes/sdci_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-server
spec:
  selector:
    matchLabels:
      app: sdci-server
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-server
    spec:
      containers:
      - name: sdci-server-container
        image: queenie2002/sdci-project:server
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
