project_sdci/kubernetes/TEST_sdci_gf4_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdci-gf4-clusterip
spec:
  selector:
    app: sdci-gf4
  ports:
  - protocol: TCP
    name: http    
    port: 8080
    targetPort: 8080
  type: ClusterIP
