project_sdci/kubernetes/sdci_frService_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdci-frService-clusterip
spec:
  selector:
    app: sdci-frService
  ports:
  - protocol: TCP
    name: http    
    port: 8080
    targetPort: 8080
  type: ClusterIP
