project_sdci/kubernetes/sdci_frService_istio_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdci-frservice-service
spec:
  selector:
    app: sdci-frservice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
