project_sdci/kubernetes/sdci_gf2_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdci-gf2-clusterip
spec:
  selector:
    app: sdci-gf2
  ports:
  - protocol: TCP
    name: http    
    port: 8080
    targetPort: 8080
  type: ClusterIP
