project_sdci/kubernetes/sdci_gi_cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdci-gi-clusterip
spec:
  selector:
    app: sdci-gi
  ports:
  - protocol: TCP
    name: http    
    port: 8080
    targetPort: 8080
  type: ClusterIP
