project_sdci/kubernetes/sdci_routing_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sdci-gf2-routing
spec:
  hosts:
  - sdci-gi-clusterip
  http:
  - match:
    - sourceLabels:
        app: sdci-gf2
    route:
    - destination:
        host: sdci-frservice-clusterip
        port:
          number: 8080
